<resources>
    <string name="app_name">Super-Power-Naps</string>
    <string name="app_title">ᏕᏬᎮᏋᏒ ᎮᎧᏇᏋᏒ ᏁᏗᎮᏕ</string>
    <string name="pillow_logo">pillow_logo</string>
    <string name="take_a_nap">Take A Nap</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="alarm_title">Nap</string>
    <string name="alarm_question">How are you feeling?</string>
    <string name="tired">Tired</string>
    <string name="sleepy">Sleepy</string>
    <string name="normal">Normal</string>
    <string name="cancel_alarm">Cancel alarm</string>
    <string name="error">error</string>
    <string name="logout">Logout</string>
    <string name="show_alarms">Alarms</string>
    <string name="tips">Tips</string>
</resources>
